application/base/raspberry/arr/httproute-prowlarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: arr
spec:
  parentRefs:
    - name: raspberry-gateway
      namespace: envoy-gateway-system
      sectionName: prowlarr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prowlarr
          port: 9696
