application/base/raspberry/arr/httproute-radarr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radarr
  namespace: arr
spec:
  parentRefs:
    - name: raspberry-gateway
      namespace: envoy-gateway-system
      sectionName: radarr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radarr-app
          port: 7878
