application/base/raspberry/arr/httproute-transmission.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: transmission
  namespace: arr
spec:
  parentRefs:
    - name: raspberry-gateway
      namespace: envoy-gateway-system
      sectionName: transmission
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: transmission
          port: 9091
